--- a/scss/tema/_main.scss
+++ b/scss/tema/_main.scss
@@ -127,10 +127,24 @@ body{
 		}
 		.btnsos{
 			padding: 5px 5px;
-			margin: 0;
+			//margin: 0;
 		}
 	}
 	#main-contenet{
 		min-width: 700px;
 	}
+}
+
+@media (max-width: 940px) {
+  #section-two { 
+    h2{
+      border-bottom-style: none;
+    }
+    span{
+      display: block;
+      width: 140px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 }
